force-app/main/default/objects/numm__maileva_conf__c/numm__maileva_conf__c.object-meta.xml
<CustomObject>
    <label>Configuration Maileva</label>
    <nameField>
        <label>Config</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations Maileva</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>