force-app/main/default/objects/numm__maileva_conf__c/fields/numm__Active__c.field-meta.xml
<CustomField>
    <fullName>numm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>