force-app/main/default/objects/numm__maileva_conf__c/fields/numm__EnvelopeType__c.field-meta.xml
<CustomField>
    <fullName>numm__EnvelopeType__c</fullName>
    <label>EnvelopeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>