force-app/main/default/objects/numm__maileva_conf__c/fields/numm__EnvelopeWindowType__c.field-meta.xml
<CustomField>
    <fullName>numm__EnvelopeWindowType__c</fullName>
    <label>EnvelopeWindowType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMPL</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>