force-app/main/default/objects/numm__maileva_conf__c/fields/numm__PostageClass__c.field-meta.xml
<CustomField>
    <fullName>numm__PostageClass__c</fullName>
    <label>PostageClass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STANDARD</fullName>
            </value>
            <value>
                <fullName>SLOW</fullName>
            </value>
            <value>
                <fullName>RECOMMANDE</fullName>
            </value>
            <value>
                <fullName>RECOMMANDE_AR</fullName>
            </value>
            <value>
                <fullName>SLOW_NB</fullName>
            </value>
            <value>
                <fullName>DESTINEO_EL_STD_S1</fullName>
            </value>
            <value>
                <fullName>DESTINEO_EL_STD_S2</fullName>
            </value>
            <value>
                <fullName>DESTINEO_EL_MECA_S1</fullName>
            </value>
            <value>
                <fullName>DESTINEO_EL_MECA_S2</fullName>
            </value>
            <value>
                <fullName>LETTRE_GRAND_COMPTE</fullName>
            </value>
            <value>
                <fullName>ECOPLI_GRAND_COMPTE</fullName>
            </value>
            <value>
                <fullName>LETTRE_VERTE</fullName>
            </value>
            <value>
                <fullName>LETTRE_VERTE_NB</fullName>
            </value>
            <value>
                <fullName>LRE</fullName>
            </value>
            <value>
                <fullName>LRE_AR</fullName>
            </value>
            <value>
                <fullName>LRE_TE</fullName>
            </value>
            <value>
                <fullName>LRE_TE_AR</fullName>
            </value>
            <value>
                <fullName>LSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>