force-app/main/default/objects/numm__maileva_conf__c/fields/numm__PrintDuplex__c.field-meta.xml
<CustomField>
    <fullName>numm__PrintDuplex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintDuplex</label>
    <type>Checkbox</type>
</CustomField>