force-app/main/default/objects/numm__maileva_conf__c/fields/numm__PrintSenderAddress__c.field-meta.xml
<CustomField>
    <fullName>numm__PrintSenderAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PrintSenderAddress</label>
    <type>Checkbox</type>
</CustomField>