force-app/main/default/objects/numm__maileva_conf__c/fields/numm__TreatAR__c.field-meta.xml
<CustomField>
    <fullName>numm__TreatAR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TreatAR</label>
    <type>Checkbox</type>
</CustomField>