force-app/main/default/objects/numm__maileva_conf__c/fields/numm__TreatUndeliveredMail__c.field-meta.xml
<CustomField>
    <fullName>numm__TreatUndeliveredMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TreatUndeliveredMail</label>
    <type>Checkbox</type>
</CustomField>