force-app/main/default/objects/numm__maileva_conf__c/fields/numm__Type_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_relance__c</fullName>
    <label>Type de relance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecrit Simple</fullName>
            </value>
            <value>
                <fullName>Ecrit RAR</fullName>
            </value>
            <value>
                <fullName>Mise en demeure RAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>