force-app/main/default/objects/numm__maileva_conf__c/fields/numm__UseFlyLeaf__c.field-meta.xml
<CustomField>
    <fullName>numm__UseFlyLeaf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseFlyLeaf</label>
    <type>Checkbox</type>
</CustomField>